# pwned-passwords

./: .gitignore  README.md  pyproject.toml
pwned_passwords/: __init__.py  _structs.py  _utils.py
tests/: test_utils.py
tests/test-data/: password-ntlm-no-padding.txt  password-ntlm-padding.txt  password-sha1-no-padding.txt  password-sha1-padding.txt
